Edited the index file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=bootstrap_practice.html">
+    <title>Redirecting to Bootstrap</title>
+    <style>
+        body {
+            background-color: lightslategray;
+        }
+
+        p {
+            font-size: large;
+            font-family:Arial, Helvetica, sans-serif;
+        }
+
+        a {
+            text-decoration: none;
+            font-size: x-large;
+            font-family:Arial, Helvetica, sans-serif;
+            font-weight: 900;
+        }
+    </style>
 </head>
 <body>
+    <p><b>Created an Index file for vercel to be able function properly when deploying</b></p>
+    <a href="bootstrap-practice.html">Click me</a>
 </body>
 </html>
